@@ -1,4 +1,4 @@
-package rbasamoyai.createbigcannons.crafting.casting;
+package rbasamoyai.createbigcannons.munitions.config;
 
 import java.util.Map;
 import java.util.concurrent.Executor;
@@ -21,86 +21,85 @@ import net.minecraft.tags.TagKey;
 import net.minecraft.util.GsonHelper;
 import net.minecraft.util.profiling.ProfilerFiller;
 import net.minecraft.world.level.material.Fluid;
+import net.minecraft.world.level.material.FluidState;
 import rbasamoyai.createbigcannons.base.tag_utils.FluidTypeDataHolder;
 import rbasamoyai.createbigcannons.multiloader.NetworkPlatform;
 import rbasamoyai.createbigcannons.network.RootPacket;
 import rbasamoyai.createbigcannons.utils.CBCRegistryUtils;
 import rbasamoyai.createbigcannons.utils.CBCUtils;
 
-public class FluidCastingTimeHandler {
+public class FluidDragHandler {
 
-	private static final FluidTypeDataHolder<Integer> CASTING_TIME = new FluidTypeDataHolder<>();
+	private static final FluidTypeDataHolder<Double> FLUID_DRAG = new FluidTypeDataHolder<>();
 
 	public static class ReloadListener extends SimpleJsonResourceReloadListener {
 		private static final Gson GSON = new Gson();
 		public static final ReloadListener INSTANCE = new ReloadListener();
 
-		public ReloadListener() {
-			super(GSON, "fluid_casting_time");
-		}
+		ReloadListener() { super(GSON, "fluid_drag"); }
 
 		@Override
-		protected void apply(Map<ResourceLocation, JsonElement> map, ResourceManager resources, ProfilerFiller profiler) {
-			clear();
+		protected void apply(Map<ResourceLocation, JsonElement> map, ResourceManager manager, ProfilerFiller profiler) {
+			FLUID_DRAG.cleanUp();
 
 			for (Map.Entry<ResourceLocation, JsonElement> entry : map.entrySet()) {
 				JsonElement el = entry.getValue();
 				if (!el.isJsonObject()) continue;
 				JsonObject obj = el.getAsJsonObject();
-				int castingTime = GsonHelper.getAsInt(obj, "casting_time", 1000);
-				castingTime = Math.max(castingTime, 0);
+				double fluidDrag = Math.max(GsonHelper.getAsDouble(obj, "fluid_drag", 0), 0);
 
 				ResourceLocation loc = entry.getKey();
 				if (loc.getPath().startsWith("tags/")) {
 					TagKey<Fluid> tag = TagKey.create(CBCRegistryUtils.getFluidRegistryKey(), CBCUtils.location(loc.getNamespace(), loc.getPath().substring(5)));
-					CASTING_TIME.addTagData(tag, castingTime);
+					FLUID_DRAG.addTagData(tag, fluidDrag);
 				} else {
 					Fluid fluid = CBCRegistryUtils.getOptionalFluid(loc).orElseThrow(() -> {
 						return new JsonSyntaxException("Unknown fluid type '" + loc + "'");
 					});
-					CASTING_TIME.addData(fluid, castingTime);
+					FLUID_DRAG.addData(fluid, fluidDrag);
 				}
 			}
 		}
 	}
 
-	public static void clear() { CASTING_TIME.cleanUp(); }
+	public static void loadTags() { FLUID_DRAG.loadTags(); }
 
-	public static void loadTags() { CASTING_TIME.loadTags(); }
+	public static double getFluidDrag(FluidState fluidState) { return getFluidDrag(fluidState.getType()); }
 
-	public static int getCastingTime(Fluid fluid) {
-		Integer castingTime = CASTING_TIME.getData(fluid);
-		return castingTime == null ? 1000 : castingTime;
+	public static double getFluidDrag(Fluid fluid) {
+		Double value = FLUID_DRAG.getData(fluid);
+		return value == null ? 0 : value;
 	}
 
 	public static void writeBuf(FriendlyByteBuf buf) {
-		CASTING_TIME.writeToNetwork(buf, FriendlyByteBuf::writeVarInt);
+		FLUID_DRAG.writeToNetwork(buf, FriendlyByteBuf::writeDouble);
 	}
 
 	public static void readBuf(FriendlyByteBuf buf) {
-		CASTING_TIME.readFromNetwork(buf, FriendlyByteBuf::readVarInt);
+		FLUID_DRAG.readFromNetwork(buf, FriendlyByteBuf::readDouble);
 	}
 
 	public static void syncTo(ServerPlayer player) {
-		NetworkPlatform.sendToClientPlayer(new ClientboundFluidCastingTimePacket(), player);
+		NetworkPlatform.sendToClientPlayer(new ClientboundFluidDragPacket(), player);
 	}
 
 	public static void syncToAll(MinecraftServer server) {
-		NetworkPlatform.sendToClientAll(new ClientboundFluidCastingTimePacket(), server);
+		NetworkPlatform.sendToClientAll(new ClientboundFluidDragPacket(), server);
 	}
 
-	public record ClientboundFluidCastingTimePacket(@Nullable FriendlyByteBuf buf) implements RootPacket {
-		public ClientboundFluidCastingTimePacket() { this(null); }
+	public record ClientboundFluidDragPacket(@Nullable FriendlyByteBuf buf) implements RootPacket {
+		public ClientboundFluidDragPacket() { this(null); }
 
-		public static ClientboundFluidCastingTimePacket copyOf(FriendlyByteBuf buf) {
-			return new ClientboundFluidCastingTimePacket(new FriendlyByteBuf(buf.copy()));
+		public static ClientboundFluidDragPacket copyOf(FriendlyByteBuf buf) {
+			return new ClientboundFluidDragPacket(new FriendlyByteBuf(buf.copy()));
 		}
 
 		@Override public void rootEncode(FriendlyByteBuf buf) { writeBuf(buf); }
 
 		@Override
 		public void handle(Executor exec, PacketListener listener, @Nullable ServerPlayer sender) {
-			if (this.buf != null) readBuf(this.buf);
+			if (this.buf != null)
+				readBuf(this.buf);
 		}
 	}
 
