@@ -1,0 +1,3 @@
+{
+  "fluid_drag": 60
+}
